Forgot paint polyfill

--- a/astro/package.json
+++ b/astro/package.json
@@ -31,6 +31,7 @@
     "@portabletext/svelte": "^1.0.1",
     "@sanity/client": "^3.4.1",
     "astro": "^2.5.2",
+    "css-paint-polyfill": "^3.4.0",
     "dotenv": "^16.0.3",
     "i18n-iso-countries": "^7.6.0",
     "lunr": "^2.3.9",
