--- a/cms/package.json
+++ b/cms/package.json
@@ -25,14 +25,16 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/code-input": "^3.0.1",
+    "@sanity/code-input": "^4.1.1",
     "@sanity/document-internationalization": "^1.0.2",
+    "@sanity/icons": "^2.4.1",
     "@sanity/table": "^1.0.1",
     "@sanity/vision": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-is": "^18.2.0",
-    "sanity": "^3.0.6",
+    "sanity": "^3.15.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
