--- a/cms/package.json
+++ b/cms/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-is": "^18.2.0",
+    "rxjs": "^7.8.1",
     "sanity": "^3.15.1",
     "styled-components": "^5.3.6"
   },
