--- a/astro/package.json
+++ b/astro/package.json
@@ -28,10 +28,10 @@
     "@astrojs/sitemap": "^1.3.0",
     "@astrojs/svelte": "^4.0.0",
     "@portabletext/svelte": "^1.0.1",
-    "@sanity/client": "^3.4.1",
+    "@sanity/astro": "^1.3.0",
+    "@sanity/client": "^6.4.11",
     "astro": "^3.0.5",
     "css-paint-polyfill": "^3.4.0",
-    "dotenv": "^16.0.3",
     "i18n-iso-countries": "^7.6.0",
     "lottie-web": "^5.12.2",
     "lunr": "^2.3.9",
@@ -41,11 +41,13 @@
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.0.1",
+    "@sanity/types": "^3.16.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "breakpoint-sass": "^3.0.0",
     "chromeos-dev-markdown": "^1.0.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.6.0",
