--- a/cms/package.json
+++ b/cms/package.json
@@ -32,12 +32,15 @@
     "@sanity/table": "^1.0.1",
     "@sanity/ui": "^1.7.8",
     "@sanity/vision": "^3.0.6",
+    "get-youtube-id": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-is": "^18.2.0",
+    "react-lite-youtube-embed": "^2.3.52",
     "rxjs": "^7.8.1",
     "sanity": "^3.15.1",
+    "sanity-plugin-computed-field": "^2.0.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
