Add custom YouTube input
Automatically derrives YouTube ID from URL and stores both

--- a/cms/tsconfig.json
+++ b/cms/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "$lib/*": ["./lib/*"],
       "$subschema/*": ["./schemas/subschema/*"],
+      "$components/*": ["./components/*"],
       "$fields/*": ["./schemas/fields/*"]
     }
   },
