--- a/astro/package.json
+++ b/astro/package.json
@@ -31,6 +31,7 @@
     "@sanity/astro": "^1.3.0",
     "@sanity/client": "^6.4.11",
     "astro": "^3.0.5",
+    "astro-portabletext": "^0.9.4",
     "css-paint-polyfill": "^3.4.0",
     "i18n-iso-countries": "^7.6.0",
     "lottie-web": "^5.12.2",
