--- a/cms/package.json
+++ b/cms/package.json
@@ -58,6 +58,14 @@
     "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   },
+  "engines": {
+    "node": ">=18.16.0",
+    "pnpm": ">=8.6.0"
+  },
+  "volta": {
+    "node": "18.16.0",
+    "pnpm": "8.6.0"
+  },
   "lint-staged": {
     "**/*.{js,mjs,cjs,ts,json}": "eslint",
     "**/*": "prettier -c"
