--- a/astro/package.json
+++ b/astro/package.json
@@ -36,6 +36,7 @@
     "i18n-iso-countries": "^7.6.0",
     "lottie-web": "^5.12.2",
     "lunr": "^2.3.9",
+    "prismjs": "^1.29.0",
     "requestidlecallback": "^0.3.0",
     "slugify": "^1.6.6",
     "svelte": "^3.59.1",
