--- a/astro/package.json
+++ b/astro/package.json
@@ -37,6 +37,7 @@
     "i18n-iso-countries": "^7.6.0",
     "lottie-web": "^5.12.2",
     "lunr": "^2.3.9",
+    "pagefind": "^1.0.4",
     "prismjs": "^1.29.0",
     "requestidlecallback": "^0.3.0",
     "slugify": "^1.6.6",
@@ -44,6 +45,7 @@
     "vite-plugin-pwa": "^0.15.0"
   },
   "devDependencies": {
+    "@rollup/plugin-virtual": "^3.0.2",
     "@rollup/plugin-yaml": "^4.0.1",
     "@sanity/types": "^3.16.4",
     "@types/node": "^18.11.18",
@@ -86,6 +88,7 @@
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-standard": "^29.0.0",
     "uslug": "^1.0.4",
+    "vite-plugin-virtual": "^0.2.0",
     "yaml": "^2.2.1"
   },
   "lint-staged": {
