Move to pre-generating search files
Otherwise it won't work on clean builds

--- a/astro/tsconfig.json
+++ b/astro/tsconfig.json
@@ -11,7 +11,8 @@
       "$$*": ["lib/*"],
       "$types/*": ["types/*"],
       "$sass/*": ["src/sass/*"],
-      "$markdown/*": ["src/markdown/*"]
+      "$markdown/*": ["src/markdown/*"],
+      "$generated/*": [".generated/*"]
     }
   }
 }
