--- a/astro/package.json
+++ b/astro/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
+    "generate:search": "tsx ./lib/search.ts",
+    "astro:dev": "astro dev",
+    "astro:build": "astro build",
+    "start": "run-s generate:search astro:dev",
+    "build": "run-s generate:search astro:build",
     "preview": "astro preview",
     "astro": "astro",
     "prepare": "cd ../ && husky install ./astro/.husky",
@@ -30,7 +33,7 @@
     "@astrojs/svelte": "^4.0.0",
     "@portabletext/svelte": "^1.0.1",
     "@sanity/astro": "^1.3.0",
-    "@sanity/client": "^6.4.11",
+    "@sanity/client": "^6.8.0",
     "astro": "^3.0.5",
     "astro-portabletext": "^0.9.4",
     "css-paint-polyfill": "^3.4.0",
@@ -87,6 +90,7 @@
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-standard": "^29.0.0",
+    "tsx": "^4.6.1",
     "uslug": "^1.0.4",
     "vite-plugin-virtual": "^0.2.0",
     "yaml": "^2.2.1"
