--- a/site/.eslintrc.yml
+++ b/site/.eslintrc.yml
@@ -8,10 +8,11 @@ extends:
   - plugin:import/typescript
   - plugin:prettier/recommended
   - plugin:astro/recommended
+  - plugin:svelte/recommended
+  - plugin:svelte/prettier
 plugins:
   - import
   - prettier
-  - svelte3
   - '@typescript-eslint'
 env:
   browser: true
@@ -43,7 +44,17 @@ overrides:
         - '*.astro'
   - files:
       - '*.svelte'
-    processor: svelte3/svelte3
+    parser: svelte-eslint-parser
+    parserOptions:
+      parser: '@typescript-eslint/parser'
 rules:
   n/no-missing-import: off
   n/no-unpublished-import: off
+  svelte/valid-compile: warn
+  '@typescript-eslint/no-explicit-any': off
+  '@typescript-eslint/no-unused-vars':
+    # Allow unused vars starting with _, for quick iterators
+    - error
+    - argsIgnorePattern: '^_'
+      varsIgnorePattern: '^_'
+      caughtErrorsIgnorePattern: '^_'
