--- a/site/package.json
+++ b/site/package.json
@@ -16,7 +16,7 @@
     "lint": "run-p *:lint",
     "lint:staged": "lint-staged",
     "fix": "run-p *:fix",
-    "js:lint": "eslint --quiet .",
+    "js:lint": "eslint .",
     "js:fix": "eslint --fix .",
     "prettier:lint": "prettier --plugin-search-dir=. -c .",
     "prettier:fix": "prettier --plugin-search-dir=. --write .",
@@ -29,19 +29,23 @@
   },
   "dependencies": {
     "@astrojs/node": "^8.2.3",
-    "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/svelte": "^5.0.0",
+    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/svelte": "^5.2.0",
     "@sanity/client": "^6.8.0",
-    "@sanity/webhook": "^4.0.0",
-    "astro": "^4.4.14",
+    "astro": "^4.5.4",
     "astro-portabletext": "^0.9.4",
+    "bcrypt": "^5.1.1",
     "css-paint-polyfill": "^3.4.0",
+    "firebase-functions": "^4.8.0",
     "i18n-iso-countries": "^7.6.0",
     "lottie-web": "^5.12.2",
     "pagefind": "^1.0.4",
+    "posthtml": "^0.16.6",
+    "posthtml-match-helper": "^1.0.3",
     "prismjs": "^1.29.0",
     "requestidlecallback": "^0.3.0",
     "svelte": "^4.0.0",
+    "uslug": "^1.0.4",
     "vite-plugin-pwa": "^0.15.0"
   },
   "devDependencies": {
@@ -49,20 +53,20 @@
     "@rollup/plugin-yaml": "^4.0.1",
     "@sanity/types": "^3.16.4",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "breakpoint-sass": "^3.0.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.31.0",
+    "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-astro": "^0.21.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-svelte": "^2.35.1",
     "firebase-tools": "^13.4.0",
     "front-matter": "^4.0.2",
     "fs-extra": "^11.1.1",
@@ -71,38 +75,34 @@
     "lint-staged": "^13.1.0",
     "lunr": "^2.3.9",
     "nanoid": "^4.0.1",
-    "node-fetch": "^3.3.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.35",
     "postcss-html": "^1.5.0",
-    "posthtml": "^0.16.6",
-    "posthtml-match-helper": "^1.0.3",
-    "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.9.0",
-    "prettier-plugin-svelte": "^2.10.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-svelte": "^3.2.2",
     "sass": "^1.62.1",
     "sass-toolkit": "^2.10.2",
     "slugify": "^1.6.6",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.4",
-    "stylelint-config-recommended": "^9.0.0",
-    "stylelint-config-standard": "^29.0.0",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-sass-guidelines": "^11.1.0",
     "tsx": "^4.6.1",
-    "uslug": "^1.0.4",
-    "vite": "^5.0.7",
+    "vite": "^5.1.6",
     "vite-plugin-virtual": "^0.2.0",
     "yaml": "^2.2.1"
   },
   "lint-staged": {
-    "**/*.{svelte,astro}": "stylelint",
+    "**/*.{svelte,astro}": "stylelint -c .stylelintrc.json",
     "**/*.{js,mjs,cjs,ts,astro,svelte}": "eslint -c .eslintrc.yml",
     "**/*.*": "prettier --plugin-search-dir=. -c"
   },
   "engines": {
-    "node": "18",
+    "node": "20",
     "pnpm": "8"
   },
   "volta": {
-    "node": "18.16.0",
+    "node": "20.11.1",
     "pnpm": "8.6.0"
   }
 }
