--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "prepare": "cd ../ && husky install ./site/.husky",
+    "pretest": "run-s generate:search",
     "test": "run-s lint build",
     "lint": "run-p *:lint",
     "lint:staged": "lint-staged",
