--- a/site/package.json
+++ b/site/package.json
@@ -41,6 +41,7 @@
     "firebase-functions": "^4.8.0",
     "i18n-iso-countries": "^7.6.0",
     "lottie-web": "^5.12.2",
+    "octokit": "^3.1.2",
     "pagefind": "^1.0.4",
     "posthtml": "^0.16.6",
     "posthtml-match-helper": "^1.0.3",
