--- a/.github/workflows/tbd-site.yml
+++ b/.github/workflows/tbd-site.yml
@@ -18,6 +18,8 @@ jobs:
   test-build:
     runs-on: ubuntu-latest
     steps:
+      - name: Who Are You
+        run: echo "I am ${{ GITHUB_REF }}"
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Node and PNPM
