--- a/.github/workflows/tbd-site.yml
+++ b/.github/workflows/tbd-site.yml
@@ -50,10 +50,12 @@ jobs:
       - name: Upload search build
         # Switch to 'refs/heads/main' when merged
         if: github.ref == 'refs/heads/refactor/the-great-cms-migration'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: search
-          path: ./site/public/pagefind
+          path: |
+            ./site/public/pagefind
+            ./site/.generated
 
   #########################
   ## Preview Deploy
@@ -116,10 +118,10 @@ jobs:
         working-directory: site
         run: pnpm install
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: search
-          path: ./site/public/pagefind
+          path: ./site
       - name: Make .env file
         uses: SpicyPizza/create-envfile@v2.0
         with:
