--- a/.github/workflows/tbd-site.yml
+++ b/.github/workflows/tbd-site.yml
@@ -79,7 +79,7 @@ jobs:
           expires: 30d
 
   #########################
-  ## Production Deploy
+  ## Deploy site to Firebase
   #########################
   deploy:
     needs: test-build
@@ -127,17 +127,17 @@ jobs:
           directory: site
       - name: Channel ID
         run: echo ${{ env.CHANNEL_ID }}
-      # - name: Deploy Hosting
-      #   uses: FirebaseExtended/action-hosting-deploy@v0
-      #   with:
-      #     entryPoint: site
-      #     repoToken: ${{ secrets.GITHUB_TOKEN }}
-      #     firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_CROS_STAGING }}
-      #     channelId: ${{ env.CHANNEL_ID }}
-      #   env:
-      #     FIREBASE_CLI_EXPERIMENTS: webframeworks
-      #     SANITY_PROJECT_ID: ${{ secrets.SANITY_PROJECT_ID }}
-      #     SANITY_DATASET: ${{ secrets.SANITY_DATASET }}
-      #     SANITY_TOKEN: ${{ secrets.SANITY_TOKEN }}
-      #     SANITY_WEBHOOK_SECRET: ${{ secrets.SANITY_WEBHOOK_SECRET }}
-      #     GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
+      - name: Deploy Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          entryPoint: site
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_CROS_STAGING }}
+          channelId: ${{ env.CHANNEL_ID }}
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
+          SANITY_PROJECT_ID: ${{ secrets.SANITY_PROJECT_ID }}
+          SANITY_DATASET: ${{ secrets.SANITY_DATASET }}
+          SANITY_TOKEN: ${{ secrets.SANITY_TOKEN }}
+          SANITY_WEBHOOK_SECRET: ${{ secrets.SANITY_WEBHOOK_SECRET }}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
