--- a/.github/workflows/tbd-site.yml
+++ b/.github/workflows/tbd-site.yml
@@ -84,24 +84,27 @@ jobs:
   deploy:
     needs: test-build
     runs-on: ubuntu-latest
-    # Change to 'refs/heads/main' when merged
-    if: github.ref == 'refs/heads/refactor/the-great-cms-migration' || github.event_name == 'pull_request'
+    # Let non-Dependabot branches and PRs do a preview deploy
+    if: (github.ref_type == 'branch' && !startsWith(github.ref_name , 'dependabot')) || github.event_name == 'pull_request'
     concurrency:
       group: ${{ github.ref }}
       cancel-in-progress: true
     steps:
-      - name: Set Channel ID - Next
-        if: github.ref == 'refs/heads/refactor/the-great-cms-migration'
-        run: echo "CHANNEL_ID=" >> $GITHUB_ENV
-      - name: Set Channel ID - Live
+      # - name: Set Channel ID - Next
+      #   if: github.ref == 'refs/heads/refactor/the-great-cms-migration'
+      #   run: echo "CHANNEL_ID=next" >> $GITHUB_ENV
+      # - name: Set Channel ID - Live
         if: github.ref == 'refs/heads/main'
         run: echo "CHANNEL_ID=live" >> $GITHUB_ENV
+      - name: Set Channel ID - Branch
+        if: github.ref_type == 'branch' && !startsWith(github.ref_name , 'dependabot')
+        run: echo "CHANNEL_ID=branch-${{ github.ref_name }}" >> $GITHUB_ENV
       - name: Set Channel ID - PR
         if: github.event_name == 'pull_request'
-        run: echo "CHANNEL_ID=" >> $GITHUB_ENV
+        run: echo "CHANNEL_ID=pr-${{ github.event.number }}" >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Node and PNPM
+      - name: Setup PNPM
         uses: pnpm/action-setup@v3
         with:
           version: 8
