--- a/.github/workflows/tbd-site.yml
+++ b/.github/workflows/tbd-site.yml
@@ -91,11 +91,11 @@ jobs:
       cancel-in-progress: true
     steps:
       - name: Set Channel ID - Branch
-        if: github.ref_type == 'branch' && !startsWith(github.ref_name , 'dependabot')
+        if: github.ref_type == 'branch'
         run: echo "CHANNEL_ID=branch-${{ github.ref_name }}" >> $GITHUB_ENV
-      # - name: Set Channel ID - Next
-      #   if: github.ref == 'refs/heads/refactor/the-great-cms-migration'
-      #   run: echo "CHANNEL_ID=next" >> $GITHUB_ENV
+      - name: Set Channel ID - Next
+        if: github.ref == 'refs/heads/refactor/the-great-cms-migration'
+        run: echo "CHANNEL_ID=next" >> $GITHUB_ENV
       - name: Set Channel ID - Live
         if: github.ref == 'refs/heads/main'
         run: echo "CHANNEL_ID=live" >> $GITHUB_ENV
